--- a/myApp/public/css/app.css
+++ b/myApp/public/css/app.css
@@ -23,3 +23,7 @@ body::-webkit-scrollbar-track {
     background: #555;
     background-color: rgba(0, 0, 0, 0.4); /* Darker on hover */
 }
+
+* {
+    font-family: "inter";
+}
